Correction to additional work rows on mobile

--- a/styles/stylesheet-2.0.css
+++ b/styles/stylesheet-2.0.css
@@ -605,7 +605,7 @@ grid-row: 3/span 1;
     display:grid;
     grid-gap: 5px;
     grid-template-columns: repeat(4,1fr);
-    grid-template-rows: 4;
+    grid-template-rows: auto auto auto auto;
     grid-column: 1/span 4;
     grid-row:3;
   }
